# realman_sim

./: README.md  pyproject.toml  requirements.txt
outputs/joycon_dataset/task1/episode_0000/: meta.json
realman_jinyu/: __init__.py  note.md
realman_jinyu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
realman_jinyu/env/: sim_config.py  sim_env.py  sim_env_old.py  task_hang_package_env copy.py  task_hang_package_env.py  task_put_cube_env.py
realman_jinyu/joycon_zjy/: collect_episodes.py
realman_jinyu/joycon_zjy/aloha_sim_env/: TeleopEnv2arms.py  collect_sim_cv2.py  record_2arms_cv2.py  record_2arms_vedio.py  record_hdf5.py  record_hdf5_same_len.py  xbox_con.py  xbox_controller.py
realman_jinyu/kinematics/: grad_ik.py
realman_jinyu/kinematics/__pycache__/: grad_ik.run_grad_ik-16.py310.1.nbc  grad_ik.run_grad_ik-16.py310.nbi
realman_jinyu/mjcf/: actuator_two_arms_gripper.xml  gripper_realman.xml  realman_65_two_arms_gripper.xml  realman_65_two_arms_m.xml  scence.xml  scence_twall.xml  scence_two_arms.xml  scence_two_arms_tube.xml  scene_realman.xml  task_hang_package.xml  task_put_tube.xml
realman_jinyu/utils/__pycache__/: transform_utils.angular_error-182.py310.1.nbc  transform_utils.angular_error-182.py310.nbi  transform_utils.exp2mat-231.py310.1.nbc  transform_utils.exp2mat-231.py310.nbi  transform_utils.exp2rot-221.py310.1.nbc  transform_utils.exp2rot-221.py310.nbi  transform_utils.skew_sym-211.py310.1.nbc  transform_utils.skew_sym-211.py310.nbi  transform_utils.within_pose_threshold-195.py310.1.nbc  transform_utils.within_pose_threshold-195.py310.nbi
